dark mode: datepicker: fix color of inputs date

--- a/stylesheets/_shared.scss
+++ b/stylesheets/_shared.scss
@@ -628,6 +628,10 @@ footer {
         border-color: #444;
     }
 
+    .daterangepicker .input-mini {
+        color: #fff;
+    }
+
     :root {
         scrollbar-color: #777 #000;
     }
